# AI-Crypto-Trading-Copilot

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  ruff.toml  run_graph_mock.py  visualize_hierarchical_graph.py
ai_engine/: __init__.py  trading_copilot.py
ai_engine/agents/: __init__.py
ai_engine/agents/market/: __init__.py  evaluator.py  graph.py  schema.py  worker.py
ai_engine/agents/ml/: __init__.py  evaluator.py  graph.py  schema.py  worker.py
ai_engine/agents/risk/: __init__.py  evaluator.py  graph.py  schema.py  worker.py
ai_engine/agents/sentiment/: __init__.py  evaluator.py  graph.py  schema.py  worker.py
ai_engine/agents/supervisor/: __init__.py  agent.py
ai_engine/api/: __init__.py  models.py  routes.py  server.py
ai_engine/context/: __init__.py  builder.py  schema.py
ai_engine/graph/: __init__.py  engine.py  graph_definition.py  hierarchical_graph.py  rule_enrichment_graph.py
ai_engine/integrations/: __init__.py  crypto_social.py  hyperliquid.py  privy.py  reddit.py  twitter.py
ai_engine/tools/: __init__.py  market.py  market_data.py  ml.py  risk.py  rules.py  sentiment.py
ai_engine/utils/: __init__.py  json_fixer.py  json_guard.py  llm.py  llm_v2.py  logger.py
tests/: __init__.py  langsmith.py  test_agents.py  test_api.py  test_graph.py  test_tools.py
